# vlabs-formal

./: PROVENANCE.md  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml  requirements-ci.in
.github/workflows/: formal-verification.yml  property-tests.yml
formal/: .gitignore  ARISTOTLE_SUMMARY.md  README.md  lake-manifest.json  lakefile.toml
formal/VerifiableLabsFormal/: AdaptiveDifficulty.lean  CalibratedReward.lean  CleanPipeline.lean  CleanPromotionGate.lean  CleanVGS.lean  ConformalCoverage.lean  ContaminationRisk.lean  ContaminationSplits.lean  GeneralizationGap.lean  GeneratedAfterFreeze.lean  Main.lean  ModelRouting.lean  SelfImprovementGate.lean  VGS.lean  VerifiablePipeline.lean  VerifierInvariance.lean
scripts/: check_wheel.py
src/verifiable_labs_envs/: __init__.py
src/verifiable_labs_envs/formal_spec/: contamination_splits.py  generated_after_freeze.py
src/verifiable_labs_envs/schemas/: __init__.py  splits.py
src/vlabs_formal/: __init__.py
tests/: test_packaging_surface.py
tests/formal_spec/: test_clean_pipeline.py  test_clean_promotion_gate.py  test_clean_vgs.py  test_contamination_risk.py  test_contamination_splits.py  test_difficulty_properties.py  test_formulas_properties.py  test_gate_properties.py  test_generalization_gap.py  test_generated_after_freeze.py  test_routing_properties.py
