[project]
name = "vlabs-formal"
version = "0.0.1"
description = "Lean 4 formal track for the contamination-resistant promotion gate + property-tested Python mirror."
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8", "hypothesis>=6.100", "numpy>=1.26", "ruff>=0.6"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --import-mode=importlib"
testpaths = ["tests"]
